// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link creates a link tag 1`] = `
<a
  className="Link__Styled-cCVwFJ jaUuTr"
  href="https://example.com"
  onClick={undefined}
  target={null}
>
  Link
</a>
`;

exports[`Link onClick prop works 1`] = `
<a
  className="Link__Styled-cCVwFJ jaUuTr"
  href={undefined}
  onClick={[Function]}
  target={null}
>
  Link
</a>
`;

exports[`Link target blank works 1`] = `
<a
  className="Link__Styled-cCVwFJ jaUuTr"
  href="https://example.com"
  onClick={undefined}
  target="_blank"
>
  Link
</a>
`;
